adding claims parameter to generate jwt and used in endpoint reservation/history
